@@ -10,16 +10,8 @@ repositories {
     maven { url "https://jitpack.io" }
 }
 
-//sourceSets {
-//    main {
-//        java {
-//            srcDirs = ['src']
-//        }
-//        resources {
-//            srcDirs = ['libs']
-//        }
-//    }
-//}
+sourceCompatibility = JavaVersion.VERSION_HIGHER
+targetCompatibility = JavaVersion.VERSION_HIGHER
 
 applicationDefaultJvmArgs = ["-Djava.library.path=lib"]
 
@@ -51,6 +43,13 @@ dependencies {
     implementation 'mysql:mysql-connector-java:8.0.16'
 }
 
-task wrapper(type: Wrapper) {
-    gradleVersion = '4.10'
+wrapper {
+    gradleVersion = '6.4'
+}
+
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '--enable-preview'
+}
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
 }
